--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,63 +1,99 @@
-@import "./stake.css";
-@media all and (min-width: 0px) {
-    .nav-wrap {
-        background: #000000;        
-        padding: 25px;
-        left: 0;
-        right: auto;
-        top: 0;
-        flex: 1 0 auto;
-        width: 250px;
-        height: 100%;
-        display: initial;
-        outline: 0;        
-        z-index: 7;
-        border-right: 1px solid grey;
-        position: fixed;
-    }
-    .nav-wrap a {
-        color: #fff;
-        font-size: 20px;
-        text-decoration: none;
-        display: inline-block;
-        width: 100%;
-        margin-top: 25px;
-    }
-    .nav-wrap .navbarlinkimgs, svg {
-        width: 25px;
-        margin-right: 15px;
-        vertical-align: text-top;
-    }
-    .nav-wrap ul {
-        display: flex;
-        justify-content: center;
-    }
-    .nav-wrap ul li {
-        margin: 0 1rem;
-    }
-    .nav-wrap ul li a {
-        color: var(--white);
-        font: 2.5rem/4rem var(--font1);
-        text-decoration: none;
-    }
-    .mintbox {
-        background: linear-gradient(to bottom, #ff5722 0%, #ff6699 100%);
-        border-radius: 20px;
-        width: 100px;
-        text-align: center;
-    }
-    .stakebox {
-        background: linear-gradient(to bottom, #ff5722 0%, #ff6699 100%);
-        border-radius: 20px;
-        width: 100px;
-        text-align: center;
-    }
-    .logo {
-        /* background: white; */
-        width: 63px;
-        height: 60px;
-        margin-right: 600px;
-    }
+.navigation {
+    flex: 1 0 auto;
+    /* width: 250px; */
+    /* position: relative; */
+    display: block;
+    /* align-items: center; */
+     /* height: 60px; */
+  /* height: 100%;
+  padding: 0.5rem 0rem;
+  background-color: #000;
+  color: white; */
+    /* box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23); */
 }
 
-@media all and (min-width: 768px) {}
+.brand-name {
+    text-decoration: none;
+    color: black;
+    font-size: 1.3rem;
+    margin-left: 1rem;
+}
+
+.navigation-menu {
+    margin-left: auto;
+}
+
+.navigation-menu ul {
+    display: block;
+    padding: 0;
+}
+
+.navigation-menu li {
+    list-style-type: none;
+    margin: 0 1rem;
+}
+
+.navigation-menu li a {
+    text-decoration: none;
+    display: block;
+    /* width: 100%; */
+}
+
+.hamburger {
+    border: 0;
+    height: 40px;
+    width: 40px;
+    padding: 0.5rem;
+    border-radius: 50%;
+    background-color: #283b8b;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+    position: absolute;
+    top: 50%;
+    right: 25px;
+    transform: translateY(-50%);
+    display: none;
+}
+
+.hamburger:hover {
+    background-color: #2642af;
+}
+
+@media screen and (max-width: 500px) {
+    .hamburger {
+        display: block;
+        right: 0;
+        top: 20px
+    }
+
+    .navigation-menu ul {
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        height: calc(100vh - 60px);
+        background-color: white;
+        border-top: 1px solid black;
+        display: none;
+    }
+
+    .navigation-menu li {
+        text-align: center;
+        margin: 0;
+    }
+
+    .navigation-menu li a {
+        color: black;
+        width: 100%;
+        padding: 1.5rem 0;
+    }
+
+    .navigation-menu li:hover {
+        background-color: #eee;
+    }
+
+    .navigation-menu.expanded ul {
+        display: block;
+    }
+}
