--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,357 +1,432 @@
 @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
 @font-face {
-    font-family: "BebasNeueBold";
-    src: local("BebasNeueBold"), url(BebasNeueBold.ttf) format("ttf");
-  }
+	font-family: 'BebasNeueBold';
+	src: local('BebasNeueBold'), url(BebasNeueBold.ttf) format('ttf');
+}
 .homeContainer {
-    display: flex;
-    /* height: 100vh; */
-    flex-direction: column;
-    font-family: Roboto, sans-serif;
-    background-color: #2b2d2f;
-    /* margin-left: 250px; */
+	display: flex;
+	/* height: 100vh; */
+	flex-direction: column;
+	font-family: Roboto, sans-serif;
+	background-color: #2b2d2f;
+	margin-left: 250px;
 }
 .hero {
-    background: #000000;
-    padding: 40px 70px;
-    align-items: center;
-    text-align: left;
-    color: #ffffff;
-    display: flex;
+	background: #000000;
+	padding: 40px 70px;
+	align-items: center;
+	text-align: left;
+	color: #ffffff;
+	display: flex;
 }
 .svgcont {
-    flex: 1;    
-    border-radius: 12px;
-    width: auto;
-    margin: 50px;
-    text-align: center;
+	flex: 1;
+	border-radius: 12px;
+	width: auto;
+	margin: 50px;
+	text-align: center;
 }
 .herosectitle {
-    font-size: 60px;
-    line-height: 1.4;
-    font-weight: 700;    
-    color: rgb(255, 255, 255);
-    margin-bottom: 24px;
-    letter-spacing: -0.025em;
-    font-family: BebasNeueBold;
+	font-size: 60px;
+	line-height: 1.4;
+	font-weight: 700;
+	color: rgb(255, 255, 255);
+	margin-bottom: 24px;
+	letter-spacing: -0.025em;
+	font-family: BebasNeueBold;
 }
 .watchloves {
-    padding: 45px 80px;    
-    color: #ffffff;
-    text-align: center;
-    max-width: 80%;
-    margin: auto;
+	padding: 45px 80px;
+	color: #ffffff;
+	text-align: center;
+	max-width: 80%;
+	margin: auto;
 }
 .watchloves h2 {
-    font-size: 42px;
-    line-height: 50px;
-    font-weight: 700;
-    margin: 30px 0px;
-    font-family: BebasNeueBold;
+	font-size: 42px;
+	line-height: 50px;
+	font-weight: 700;
+	margin: 30px 0px;
+	font-family: BebasNeueBold;
 }
 .watchloves p {
-    font-size: 16px;
-    line-height: 1.4;
-    margin-top: 25px;
+	font-size: 16px;
+	line-height: 1.4;
+	margin-top: 25px;
 }
 .intro {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 60vh;
-    background-image: url("https://i.ibb.co/z43FxGP/pngkit-dots-png-344191.png");
-    /* background: yellow; */
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 60vh;
+	background-image: url('https://i.ibb.co/z43FxGP/pngkit-dots-png-344191.png');
+	/* background: yellow; */
 }
 .wolf {
-    margin-top: 60px;
-    height: 340px;
-    width: 340px;
+	margin-top: 60px;
+	height: 340px;
+	width: 340px;
 }
 .faqsection {
-    max-width: 800px;
-    margin: auto;
-    color: #ffffff;
-    text-align: center;
+	max-width: 800px;
+	margin: auto;
+	color: #ffffff;
+	text-align: center;
 }
 .faqsection h2 {
-    font-size: 42px;
-    line-height: 50px;
-    font-weight: 700;
-    margin: 30px 0px;
-    font-family: BebasNeueBold;
+	font-size: 42px;
+	line-height: 50px;
+	font-weight: 700;
+	margin: 30px 0px;
+	font-family: BebasNeueBold;
 }
 .faqsection div {
-    background-color: #000000;
-    color: #ffffff !important;
-    font-size: 20px !important;
-    text-align: left;
+	background-color: #000000;
+	color: #ffffff !important;
+	font-size: 20px !important;
+	text-align: left;
 }
 .faqsection svg {
-    fill: #ffffff !important;
+	fill: #ffffff !important;
 }
 .faqsection .faq-row {
-    padding: 10px 25px !important;
+	padding: 10px 25px !important;
 }
 .faqsection .row-content-text {
-    color: #ffffff !important;
-    margin: 12px 0px;
-    font-size: 18px !important;
+	color: #ffffff !important;
+	margin: 12px 0px;
+	font-size: 18px !important;
 }
 .teamsection {
-    background: #000000;
-    padding: 40px 70px;
-    align-items: center;
-    text-align: left;
-    color: #ffffff;
+	background: #000000;
+	padding: 40px 70px;
+	align-items: center;
+	text-align: left;
+	color: #ffffff;
 }
 .teamsection h2 {
-    font-size: 48px;
-    line-height: 50px;
-    font-weight: 700;
-    margin: 30px 0px;
-    font-family: BebasNeueBold;
-    text-align: center;
+	font-size: 48px;
+	line-height: 50px;
+	font-weight: 700;
+	margin: 30px 0px;
+	font-family: BebasNeueBold;
+	text-align: center;
 }
-.carousel {    
-    border-radius: 12px;
+.carousel {
+	border-radius: 12px;
 }
 .caroimg {
-    width: 27%;
-    height: 100%;
-    border-radius: 16px;
-    padding: 15px;
-    margin: 30px;
-    text-align: center;
+	width: 25%;
+	height: 100%;
+	border-radius: 16px;
+	padding: 15px;
+	/* margin: 30px; */
+	text-align: center;
 }
 .caroimg .memberimg {
-    width: 100%;
+	width: 100%;
 }
 .caroimg h3 {
-    font-size: 23px;
-    line-height: 44px;
-    font-weight: 600;
-    text-transform: uppercase;
-    margin-top: 15px;
+	font-size: 23px;
+	line-height: 44px;
+	font-weight: 600;
+	text-transform: uppercase;
+	margin-top: 15px;
 }
 .caroimg .armyformat {
-    font-size: 17px;
-    margin-bottom: 12px;
+	font-size: 17px;
+	margin-bottom: 12px;
 }
 .caroimg .armyrole {
-    font-size: 17px;
-    margin-bottom: 12px;
-    color: #20852d;
+	font-size: 17px;
+	margin-bottom: 12px;
+	color: #20852d;
 }
 .image-list {
-    align-items: center;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+	align-items: baseline;
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 .container {
-    text-align: center;
-    font-size: 35px;
-    padding: 6px;
-    font-weight: 600;
-    background: -webkit-linear-gradient(#ff5722, #ff6699, #333);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	text-align: center;
+	font-size: 35px;
+	padding: 6px;
+	font-weight: 600;
+	background: -webkit-linear-gradient(#ff5722, #ff6699, #333);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 .connecthyper {
-    background: #20852d;
-    color: var(--white);
-    font: 1.5rem/1.5rem var(--font1);
-    border-radius: 12px;
-    font-weight: bold;
-    outline: none;
-    border: none;    
-    cursor: pointer;
-    padding: 12px 35px;
-    text-decoration: none;
-    min-height: 48px;
+	background: #20852d;
+	color: var(--white);
+	font: 1.5rem/1.5rem var(--font1);
+	border-radius: 12px;
+	font-weight: bold;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	padding: 12px 35px;
+	text-decoration: none;
+	min-height: 48px;
 }
 .heroimg {
-    height: 470px;
-    width: auto;
-    border-radius: 12px;
+	height: 470px;
+	width: auto;
+	border-radius: 12px;
 }
 .herotext {
-    flex: 1;
-    margin-right: 20px;    
-    border-radius: 12px;    
-    padding-left: 70px;
+	flex: 1;
+	margin-right: 20px;
+	border-radius: 12px;
+	padding-left: 70px;
+	margin: auto;
 }
 
 .button {
-    display: flex;
-    height: 50px;
-    width: 180px;
-    align-items: center;
-    justify-content: center;
-    border-radius: 15px;
-    background: linear-gradient(319deg, #663dff 0%, #aa00ff 37%, #cc4499 100%);
-    text-decoration: none;
+	display: flex;
+	height: 50px;
+	width: 180px;
+	align-items: center;
+	justify-content: center;
+	border-radius: 15px;
+	background: linear-gradient(319deg, #663dff 0%, #aa00ff 37%, #cc4499 100%);
+	text-decoration: none;
 }
 
 .text {
-    font-size: 18px;
-    text-align: left;
-    padding: 30px 0px 50px 0px;    
-    font-weight: 500;
-    color: #ffffff;
-    line-height: 30px;
+	font-size: 18px;
+	text-align: left;
+	padding: 30px 0px 50px 0px;
+	font-weight: 500;
+	color: #ffffff;
+	line-height: 30px;
 }
 .text p {
-    margin-top: 12px;
+	margin-top: 12px;
 }
 .mintsteps {
-    padding: 40px 10%;
+	padding: 40px 10%;
 }
 .mintsteps .herosectitle {
-    font-size: 50px;
-    margin-bottom: 0px;
+	font-size: 50px;
+	margin-bottom: 0px;
 }
 .mintsteps .text {
-    font-size: 20px;
+	font-size: 20px;
 }
 .mintsteps .text ul li {
-    list-style-type: initial;
-    margin-left: 20px;
-    font-size: 18px;
+	list-style-type: initial;
+	margin-left: 20px;
+	font-size: 18px;
 }
 .faqsection {
-    padding: 50px 0px;
+	padding: 50px 0px;
 }
 .footersection {
-    background-color: #000000;
-    border-top: 1px solid grey;
-    text-align: center;
-    padding: 40px 0px;
-    color: #ffffff;
-    margin-top: 40px;
+	background-color: #000000;
+	border-top: 1px solid grey;
+	text-align: center;
+	padding: 40px 0px;
+	color: #ffffff;
+	margin-top: 40px;
 }
-.footersection .footerlogo{
-    max-height: 80px;
+.footersection .footerlogo {
+	max-height: 80px;
 }
 .footersection h2 {
-    font-size: 42px;
-    margin: 30px 0px;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-family: BebasNeueBold;
+	font-size: 42px;
+	margin: 30px 0px;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-family: BebasNeueBold;
 }
 .footersection .sociallogins {
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 .footersection figure {
-    display: inline-block;
-    margin-right: 32px;
+	display: inline-block;
+	margin-right: 32px;
 }
 
 .h1 {
-    text-align: left;
-    padding: 10px;
-    margin-top: 60px;
-    font-weight: 600;
-    font-size: 105px;
-    /* background: -webkit-linear-gradient(0.25turn, #673ab7, #cc00ff, #333); background-color: #663dff; */
-    background-image: -webkit-linear-gradient(319deg, #663dff 0%, #aa00ff 37%, #cc4499 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	text-align: left;
+	padding: 10px;
+	margin-top: 60px;
+	font-weight: 600;
+	font-size: 105px;
+	/* background: -webkit-linear-gradient(0.25turn, #673ab7, #cc00ff, #333); background-color: #663dff; */
+	background-image: -webkit-linear-gradient(
+		319deg,
+		#663dff 0%,
+		#aa00ff 37%,
+		#cc4499 100%
+	);
+	-webkit-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 .h2 {
-    text-align: left;
-    font-size: 35px;
-    padding-top: 30px;
-    font-weight: 600;
-    /* background-color: #d63230; */
-    background: -webkit-linear-gradient(319deg, #d63230 0%, #f39237 37%, #97cc04 100%);
-    /* background: -webkit-linear-gradient(#ff5722, #ff6699, #333); */
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	text-align: left;
+	font-size: 35px;
+	padding-top: 30px;
+	font-weight: 600;
+	/* background-color: #d63230; */
+	background: -webkit-linear-gradient(
+		319deg,
+		#d63230 0%,
+		#f39237 37%,
+		#97cc04 100%
+	);
+	/* background: -webkit-linear-gradient(#ff5722, #ff6699, #333); */
+	-webkit-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 .h3 {
-    font-size: 20px;
-    font-weight: 600;
-    text-align: center;
-    color: #fff;
+	font-size: 20px;
+	font-weight: 600;
+	text-align: center;
+	color: #fff;
 }
 
 .link {
-    height: 100px;
-    background: #fbfbfd;
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-    align-items: center;
-    justify-content: center;
+	height: 100px;
+	background: #fbfbfd;
+	display: flex;
+	flex-direction: row;
+	padding: 20px;
+	align-items: center;
+	justify-content: center;
 }
 
 .linki {
-    flex-direction: row;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	flex-direction: row;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .stake {
-    display: flex;
-    height: 50px;
-    width: 180px;
-    align-items: center;
-    justify-content: center;
-    border-radius: 15px;
-    background: linear-gradient(319deg, #663dff 0%, #aa00ff 37%, #cc4499 100%);
-    color: #fff;
-    text-decoration: none;
-    font-size: 25px;
-    font-weight: 500;
+	display: flex;
+	height: 50px;
+	width: 180px;
+	align-items: center;
+	justify-content: center;
+	border-radius: 15px;
+	background: linear-gradient(319deg, #663dff 0%, #aa00ff 37%, #cc4499 100%);
+	color: #fff;
+	text-decoration: none;
+	font-size: 25px;
+	font-weight: 500;
 }
 
 .mint {
-    text-decoration: none;
-    display: flex;
-    height: 50px;
-    width: 180px;
-    align-items: center;
-    justify-content: center;
-    border-radius: 15px;
-    background: linear-gradient(319deg, #663dff 0%, #aa00ff 37%, #cc4499 100%);
-    color: #fff;
-    font-size: 25px;
-    font-weight: 500;
-    margin-left: 10px;
+	text-decoration: none;
+	display: flex;
+	height: 50px;
+	width: 180px;
+	align-items: center;
+	justify-content: center;
+	border-radius: 15px;
+	background: linear-gradient(319deg, #663dff 0%, #aa00ff 37%, #cc4499 100%);
+	color: #fff;
+	font-size: 25px;
+	font-weight: 500;
+	margin-left: 10px;
 }
 
 .footer {
-    background: linear-gradient(to bottom, #673ab7 0%, #cc00ff 100%);
-    height: 5vh;
-    color: #fff;
-    font-weight: 600;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    /* linear-gradient(to bottom, #ff5722 0%, #ff6699 100%); */
+	background: linear-gradient(to bottom, #673ab7 0%, #cc00ff 100%);
+	height: 5vh;
+	color: #fff;
+	font-weight: 600;
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	/* linear-gradient(to bottom, #ff5722 0%, #ff6699 100%); */
 }
 
 .love {
-    width: 15px;
-    height: 15px;
-    margin-left: 5px;
-    margin-right: 5px;
+	width: 15px;
+	height: 15px;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
-@media screen and (max-width: 550px) {
-    .homeContainer {
-        display: flex;
-        /* height: 100vh; */
-        flex-direction: column;
-        font-family: Roboto, sans-serif;
-        background-color: #2b2d2f;
-        width: 100%;
-    }
+/* BUG FIX */
+
+.heading {
+	font-size: 2.2rem;
+	text-align: center;
+	color: #fff;
+	/* font-weight: bold; */
+}
+
+.grid-hero {
+	display: flex;
+	flex-direction: row;
+	background: #000000;
+	padding-left: 40px;
+	align-items: center;
+	text-align: left;
+	color: #ffffff;
+}
+
+.image-grid {
+	background: #000000;
+	width: 60%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.grid-img {
+  width: 150px;
+  height: 150px;
+} 
+
+.last-img {
+  width: 200px;
+}
+
+.column {
+	width: 228px;
+	height: 389px;
+	margin-left: 25px;
+	margin-bottom: 15px;
+	border-radius: 12px;
+	display: flex;
+	flex-direction: column;
+	-moz-box-pack: center;
+	justify-content: center;
+	-moz-box-align: center;
+	align-items: center;
+	transition: all 0.3s ease-in-out 0s;
+	background-color: rgb(32, 32, 32);
+	cursor: pointer;
+}
+
+.column p {
+  font-size: 20px;
+  text-align: center;
+}
+
+.right {
+	margin-top: 50px;
+}
+.left {
+	margin-top: -50px;
+}
+
+@media (max-width: 550px) {
+	.right {
+		margin-top: 0px;
+	}
+	.left {
+		margin-top: 0px;
+	}
 }
