--- a/src/styles/stake.css
+++ b/src/styles/stake.css
@@ -1,49 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Boogaloo&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Boogaloo&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Boogaloo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Boogaloo&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 :root {
-    --color1: #060099;
-    --color2: #C51E52;
-    --color3: #012515;
-    --color4: #427a8b;
-    --color5: #8E9AAF;
-    --color6: linear-gradient(to bottom, #ff5722 0%, #ff6699 100%);
-    --color7: linear-gradient(to bottom, #673ab7 0%, #cc00ff 100%);
-    --white: #FFFFFF;
-    --black: #000000;
-    --font1: 'Boogaloo', sans-serif;
-    --font2: 'Poppins', sans-serif;
+  --color1: #060099;
+  --color2: #c51e52;
+  --color3: #012515;
+  --color4: #427a8b;
+  --color5: #8e9aaf;
+  --color6: linear-gradient(to bottom, #ff5722 0%, #ff6699 100%);
+  --color7: linear-gradient(to bottom, #673ab7 0%, #cc00ff 100%);
+  --white: #ffffff;
+  --black: #000000;
+  --font1: "Boogaloo", sans-serif;
+  --font2: "Poppins", sans-serif;
 }
 .airdroppage {
-    background: #2b2d2f;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-left: 250px;
+  background: #2b2d2f;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-left: 250px;
 }
 .airdroppage h1 {
-    font: 2.5rem/4rem var(--font1);
-    color: var(--white);
-    font-weight: bold;
+  font: 2.5rem/4rem var(--font1);
+  color: var(--white);
+  font-weight: bold;
 }
 .airdroppage h2 {
-    font: 1.125rem/1.8rem var(--font2);
-    color: var(--white);
-    font-weight: bold;
-    margin-bottom: 2rem;
+  font: 1.125rem/1.8rem var(--font2);
+  color: var(--white);
+  font-weight: bold;
+  margin-bottom: 2rem;
 }
 
 @media all and (min-width: 0px) {
-    .stake-app {
-        background: #2b2d2f;
-        padding-top: 100px;
-        align-items: center;
-        text-align: center;
-        margin-left: 250px; 
-    }
-    /* .connect-btn{
+  .stake-app {
+    background: #2b2d2f;
+    padding-top: 100px;
+    align-items: center;
+    text-align: center;
+    margin-left: 250px;
+  }
+  /* .connect-btn{
         background: var(--white);
         font: 1.125rem/1.6rem var(--font1);
         color: var(--color1);
@@ -53,134 +53,152 @@
         width: 136px;
         margin-bottom: 2rem;
     } */
-    .stake-app h1 {
-        font: 2.5rem/4rem var(--font1);
-        color: var(--white);
-        font-weight: bold;
-    }
-    .stake-app h2 {
-        font: 1.125rem/1.8rem var(--font2);
-        color: var(--white);
-        font-weight: bold;
-        margin-bottom: 2rem;
-    }
-    .card-container {
-        display: inline-block;
-        flex-direction: column;
-        justify-content: space-evenly;
-        width: 28%;
-        margin: 30px 2%;     
-        padding: 20px 30px;   
-        border-radius: 20px;
-        transition: 0.5s all;
-        background: var(--black);
-    }
-    .card-container .titles h2 {        
-        font-size: 23px;
-        display: block;
-        margin-bottom: 0px;
-    }
-    .card-container blockquote {        
-        font-size: 28px;
-        display: block;
-        color: #ffffff;
-    }
-    .card-container:hover {
-        transform: scale(1.005);
-        transition: 0.5s all;
-    }
-    .btn {
-        background: #20852d;
-        color: var(--white);
-        font: 1.5rem/1.5rem var(--font1);
-        border-radius: 12px;
-        font-weight: bold;
-        outline: none;
-        border: none;
-        height: 50px;
-        width: 180px;
-        margin: auto;
-        cursor: pointer;
-    }
-    .mb-5 {
-        margin: 1rem 0;
-    }
-    .form {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-    }
-    .form input {
-        height: 56px;
-        max-width: 40%;
-        width: 50%;
-        outline: none;
-        border: none;
-        border-radius: 12px 0 0 12px;
-        font: 1.125rem/1.8rem var(--font2);
-        color: var(--black);
-        text-align: center;
-    }
-    .form button {
-        margin: 1rem 0;
-    }
-    .form input::placeholder,
-    .form input:focus {
-        padding: 0 0.5rem;
-        font: 0.8rem/1rem var(--font2);
-        color: var(--black)
-    }
-    .reward {
-        background: var(--color5);
-        border: 1px solid var(--white);
-        font: 0.8rem/1rem var(--font2);
-        font-weight: 700;
-        border-radius: 12px;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        height: 50px;
-        width: 90%;
-        margin: 0 auto 5px;
-        color: var(--white);
-    }
-    .reward span {
-        padding: 0 0.5rem 0 0;
-    }
-    .stake-app p {
-        margin: 0.5rem 0 1.5rem;
-        font: 1rem/1.6rem var(--font2);
-        color: green;
-        font-weight: 500;
-    }
-    .stake {
-        color: #0000;
-    }
-    .airdropitem {
-        height: 300px;
-        width: 500px;
-    }
-    .airdropitem blockquote {
-        background: var(--black);
-        border: none;
-        margin-bottom: 50px;
-        font-size: 20px;
-    }
-    .connect-btn {
-        background: none;
-        color: #ffffff;
-        border: none;
-        font-size: 18px;
-        position: absolute;
-        right: 50px;
-        top: 35px;
-        cursor: pointer;
-    }
+  .stake-app h1 {
+    font: 2.5rem/4rem var(--font1);
+    color: var(--white);
+    font-weight: bold;
+  }
+  .stake-app h2 {
+    font: 1.125rem/1.8rem var(--font2);
+    color: var(--white);
+    font-weight: bold;
+    margin-bottom: 2rem;
+  }
+  .card-container {
+    display: inline-block;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 28%;
+    margin: 30px 2%;
+    padding: 20px 30px;
+    border-radius: 20px;
+    transition: 0.5s all;
+    background: var(--black);
+  }
+  .card-container .titles h2 {
+    font-size: 23px;
+    display: block;
+    margin-bottom: 0px;
+  }
+  .card-container blockquote {
+    font-size: 28px;
+    display: block;
+    color: #ffffff;
+  }
+  .card-container:hover {
+    transform: scale(1.005);
+    transition: 0.5s all;
+  }
+  .btn {
+    background: #20852d;
+    color: var(--white);
+    font: 1.5rem/1.5rem var(--font1);
+    border-radius: 12px;
+    font-weight: bold;
+    outline: none;
+    border: none;
+    height: 50px;
+    width: 180px;
+    margin: auto;
+    cursor: pointer;
+  }
+  .mb-5 {
+    margin: 1rem 0;
+  }
+  .form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .form input {
+    height: 56px;
+    max-width: 40%;
+    width: 50%;
+    outline: none;
+    border: none;
+    border-radius: 12px 0 0 12px;
+    font: 1.125rem/1.8rem var(--font2);
+    color: var(--black);
+    text-align: center;
+  }
+  .form button {
+    margin: 1rem 0;
+  }
+  .form input::placeholder,
+  .form input:focus {
+    padding: 0 0.5rem;
+    font: 0.8rem/1rem var(--font2);
+    color: var(--black);
+  }
+  .reward {
+    background: var(--color5);
+    border: 1px solid var(--white);
+    font: 0.8rem/1rem var(--font2);
+    font-weight: 700;
+    border-radius: 12px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 50px;
+    width: 90%;
+    margin: 0 auto 5px;
+    color: var(--white);
+  }
+  .reward span {
+    padding: 0 0.5rem 0 0;
+  }
+  .stake-app p {
+    margin: 0.5rem 0 1.5rem;
+    font: 1rem/1.6rem var(--font2);
+    color: green;
+    font-weight: 500;
+  }
+  .stake {
+    color: #0000;
+  }
+  .airdropitem {
+    height: 300px;
+    width: 500px;
+  }
+  .airdropitem blockquote {
+    background: var(--black);
+    border: none;
+    margin-bottom: 50px;
+    font-size: 20px;
+  }
+  .connect-btn {
+    background: none;
+    color: #ffffff;
+    border: none;
+    font-size: 18px;
+    position: absolute;
+    right: 50px;
+    top: 35px;
+    cursor: pointer;
+  }
 }
 
 @media all and (min-width: 768px) {
-    .form input {
-        width: 55%;
-    }
+  .form input {
+    width: 55%;
+  }
+}
+
+/* BUG FIX */
+
+.card-container {
+  width: 40%;
+}
+
+/* .overall-cc {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+} */
+
+.overall-cc {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* align-items: center; */
 }
