--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap'); */
 @font-face {
 	font-family: 'BebasNeueBold';
 	src: local('BebasNeueBold'), url(BebasNeueBold.ttf) format('ttf');
@@ -59,7 +59,7 @@
 	align-items: center;
 	justify-content: center;
 	height: 60vh;
-	background-image: url('https://i.ibb.co/z43FxGP/pngkit-dots-png-344191.png');
+	/* background-image: url('https://i.ibb.co/z43FxGP/pngkit-dots-png-344191.png'); */
 	/* background: yellow; */
 }
 .wolf {
@@ -120,11 +120,11 @@
 	height: 100%;
 	border-radius: 16px;
 	padding: 15px;
-	/* margin: 30px; */
 	text-align: center;
 }
 .caroimg .memberimg {
-	width: 100%;
+	width: 50%;
+	height: 70%;
 }
 .caroimg h3 {
 	font-size: 23px;
@@ -143,11 +143,13 @@
 	color: #20852d;
 }
 .image-list {
+	background: #000000;
+	color: #ffffff;
 	align-items: baseline;
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: flex-start;
 }
 .container {
 	text-align: center;
@@ -196,7 +198,7 @@
 }
 
 .text {
-	font-size: 18px;
+	font-size: 16px;
 	text-align: left;
 	padding: 30px 0px 50px 0px;
 	font-weight: 500;
@@ -379,22 +381,17 @@
 
 .image-grid {
 	background: #000000;
-	width: 60%;
+	width: 50%;
 	display: flex;
 	flex-wrap: wrap;
+	transition: all 0.3s ease-in-out 0s;
+
 }
 
-.grid-img {
-  width: 150px;
-  height: 150px;
-} 
 
-.last-img {
-  width: 200px;
-}
 
 .column {
-	width: 228px;
+	width: 40%;
 	height: 389px;
 	margin-left: 25px;
 	margin-bottom: 15px;
@@ -410,10 +407,22 @@
 	cursor: pointer;
 }
 
+.image-grid :hover {
+	background: rgba(0, 0, 0, 0) linear-gradient(315deg, rgb(0, 0, 0) 0%, rgb(127, 140, 141) 90%) repeat scroll 0% 0%;
+	box-shadow: rgba(22, 53, 76, 0.7) 0px 16px 57px 0px;
+}
+
+.grid-img {
+  width: 70%;
+  height: 150px;
+} 
+
 .column p {
   font-size: 20px;
   text-align: center;
 }
+
+
 
 .right {
 	margin-top: 50px;
@@ -423,10 +432,32 @@
 }
 
 @media (max-width: 550px) {
+
+	.image-grid {
+		width: 100%;
+	}
 	.right {
 		margin-top: 0px;
 	}
 	.left {
 		margin-top: 0px;
+	}
+
+	.column {
+		width: 80%;
+		text-align: center;
+	}
+}
+
+@media (max-width: 375) {
+	.right {
+		margin-top: 0px;
+	}
+	.left {
+		margin-top: 0px;
+	}
+
+	.column {
+		width: 80%;
 	}
 }
