edited UI using brand guide

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -406,7 +406,11 @@
 	transition: all 0.3s ease-in-out 0s;
 }
 
-
+/* .hero > .image-grid :hover { */
+.image-grid .image-div:hover {
+	background: rgba(0, 0, 0, 0) linear-gradient(315deg, rgb(0, 0, 0) 0%, rgb(127, 140, 141) 90%) repeat scroll 0% 0%;
+	box-shadow: rgba(22, 53, 76, 0.7) 0px 16px 57px 0px;
+}
 
 .image-div {
 	width: 40%;
@@ -420,15 +424,14 @@
 	justify-content: center;
 	-moz-box-align: center;
 	align-items: center;
-	/* transition: all 0.3s ease-in-out 0s; */
 	background-color: rgb(32, 32, 32);
 	cursor: pointer;
 }
 
-.image-div :hover {
+/* .image-div :hover {
 	background: rgba(0, 0, 0, 0) linear-gradient(315deg, rgb(0, 0, 0) 0%, rgb(127, 140, 141) 90%) repeat scroll 0% 0%;
 	box-shadow: rgba(22, 53, 76, 0.7) 0px 16px 57px 0px;
-}
+} */
 
 .grid-img {
   width: 70%;
